# cargo-unleash

./: .gitignore  Cargo.toml  Changelog.md  Readme.md  build.rs
.github/workflows/: deploy.yml  general.yml
src/: cli.rs  main.rs  matcher.rs  semverver.rs  util.rs
src/commands/: add_owner.rs  check.rs  clean_deps.rs  de_dev_deps.rs  gen_readme.rs  hidden_features.rs  mod.rs  readme.rs  release.rs  rename.rs  set_field.rs  to_release.rs  version.rs
test_files/: Cargo.toml  four_features.rs  no_features.rs  one_feature.rs  one_line_features.rs
tests/: check.rs  version_bumps.rs
tests/fixtures/include-pre/: Cargo.toml
tests/fixtures/include-pre/crate-a/: Cargo.toml
tests/fixtures/include-pre/crate-a/src/: lib.rs
tests/fixtures/include-pre/crate_a/: Cargo.toml
tests/fixtures/include-pre/crate_a/src/: main.rs
tests/fixtures/include-pre/cu-left-pad/: Cargo.toml
tests/fixtures/include-pre/cu-left-pad/src/: lib.rs
tests/fixtures/include-pre/left-pad/: Cargo.toml
tests/fixtures/include-pre/left-pad/src/: lib.rs
tests/fixtures/include-pre/leftpad/: Cargo.toml
tests/fixtures/include-pre/unicode-width/: Cargo.toml
tests/fixtures/include-pre/unicode-width/src/: lib.rs
tests/fixtures/issue62-subresolve/: Cargo.toml
tests/fixtures/issue62-subresolve/held/: Cargo.toml
tests/fixtures/issue62-subresolve/held/src/: main.rs
tests/fixtures/issue62-subresolve/new-scale-codec/: Cargo.toml
tests/fixtures/issue62-subresolve/new-scale-codec/src/: lib.rs
tests/fixtures/issue62-subresolve/sidekick/: Cargo.toml
tests/fixtures/issue62-subresolve/sidekick/src/: lib.rs
tests/fixtures/simple-base/: Cargo.toml
tests/fixtures/simple-base/crateA/: Cargo.toml
tests/fixtures/simple-base/crateB/: Cargo.toml
tests/fixtures/simple-base/crateC/: Cargo.toml
