[package]
name = "cargo-unleash"
version = "1.0.0-alpha.11"
authors = ["Benjamin Kampmann <ben@gnunicorn.org>"]
edition = "2018"
license = "GPL-3.0"
repository ="https://github.com/gnunicorn/cargo-unleash"
description = "Tooling to manage releasing of crates in massiv workspaces/monorepos"
readme = "Readme.md"
keywords = ["cargo", "publishing", "unleash", "workspaces", "monorepo"]
categories = ["development-tools", "development-tools::cargo-plugins", ]

exclude = [".gitignore", ".github/**"]

[[bin]]
name = "cargo-unleash"
path = "src/main.rs"

[features]
default = []
gen-readme = ["cargo-readme","lazy_static","sha1"]

[dependencies]
structopt = "0.3.9"
toml_edit = "0.2.0"
log = "0.4.8"
flexi_logger = "0.16"
petgraph = "0.5.0"
regex = "1.4.1"

# CARGO VERSION BOUND dependencies
cargo = "0.48.0"
flate2 = "1.0.3"
semver = "0.10.0"
tar = "0.4.26"

# Optional dependencies
cargo-readme = { version="3.2", optional = true }
lazy_static = { version = "1.4", optional = true }
sha1 = { version="0.6", optional = true }
