[package]
name = "cargo-unleash"
version = "1.0.0-alpha.dev"
authors = ["Benjamin Kampmann <ben@gnunicorn.org>"]
edition = "2021"
rust-version = "1.56.1"
license = "GPL-3.0"
repository = "https://github.com/gnunicorn/cargo-unleash"
description = "Tooling to manage releasing of crates in massiv workspaces/monorepos"
readme = "Readme.md"
keywords = ["cargo", "publishing", "unleash", "workspaces", "monorepo"]
categories = ["development-tools", "development-tools::cargo-plugins"]

exclude = [".gitignore", ".github/**"]

[[bin]]
name = "cargo-unleash"
path = "src/main.rs"

[features]
default = []
gen-readme = ["cargo-readme", "lazy_static", "sha1"]

[dependencies]
structopt = "0.3.26"
toml_edit = "0.14"
log = "0.4.17"
flexi_logger = "0.23.0"
petgraph = "0.6"
regex = "1.4.1"
anyhow = "1"

# CARGO VERSION BOUND dependencies
cargo = "0.64"
flate2 = "1.0.24"
git2 = "0.14"
semver = "1.0.13"
tar = "0.4.38"

# Optional dependencies
cargo-readme = { version = "3.2", optional = true }
lazy_static = { version = "1.4", optional = true }
sha1 = { version = "0.10", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.0"
predicates = "2"
toml = "0.5"
itertools = "0.10"
