[package]
name = "crate_a"
version = "0.1.0"
authors = ["a <a@be.com"]
edition = "2018"
license = "MIT"
description = "a description"
repository = "github.com/paritytech/cargo-unleash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# this one is already released
leftpad = { version = "0.2.0", path = "../leftpad" }
# this one isn't
left-pad = { version = "2.0.0-dev", path = "../left-pad" }
