[package]
name = "left-pad"
version = "2.0.0-dev"
authors = ["a <a@be.com"]
edition = "2018"
license = "MIT"
description = "a description"
repository = "github.com/paritytech/cargo-unleash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

