[package]
name = "unicode-width"
version = "10.0.0-dev"
authors = ["a <b@c.de>"]
edition = "2018"
license = "MIT"
description = "a description"
repository = "github.com/paritytech/cargo-unleash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
