[package]
name = "held"
version = "0.1.0"
edition = "2021"
authors = ["example@example.org"]
license = "MIT"
repository = "https://github.com/paritytech/cargo-unleash"
description = "The highest level, where everything fails to come together"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-scale-codec-derive = { version = "1.2.3", path = "../new-scale-codec" }
sidekick = { version = "0.1.0", path = "../sidekick" }

