[package]
name = "parity-scale-codec-derive"
version = "1.3.0" # SemVer Compatible Update
edition = "2021"
authors = ["example@example.org"]
license = "MIT"
repository = "https://github.com/paritytech/cargo-unleash"
description = "The new semver-compat but yet unreleased sub-sub-crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-scale-codec-derive = "2.0.0"
parity-scale-codec = "2.0.0"